# faker-datasets

./: CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
faker_datasets/: __init__.py
test/: test_alerts.py  test_provider.py
test/testdata/: books.json  movies.json
